ExtraProperties: Give a more common names [1/4]
Change-Id: I9aab8acb0d94e395b8a80d98f4f7642386f1351b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,5 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
-    <string name="app_name">Extra PIHooks</string>
+    <string name="app_name">Extra Properties</string>
 </resources>
